--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <h1>My Favorite Recipes</h1>
+        <article>
+        <h2>Chicken Adobo</h2>
+            <img src="images/chicken-adobo.jpg" width="350">
         <h3>List of Ingredients</h3>
         <ul>
             <li>4 to 5 pounds chicken thighs</li>
@@ -24,5 +27,57 @@
             <li>Remove the lid and simmer until the sauce is reduced and thickened and the chicken is tender, about 20 more minutes.</li>
             <li>Serve with steamed rice.</li>
         </ol>
+        </article>
+        <article>
+        <h2>Pork Sisig</h2>
+            <img src="images/Pork-Sisig-Recipe.jpg" width="330">
+        <h3>List of Ingredients</h3>
+            <h4>Braised Pork:</h4>
+            <ul>
+                <li>1 cup Filipino soy sauce</li>
+                <li>1/2 cup coconut vinegar</li>
+                <li>3 tablespoons salt</li>
+                <li>1 1/2 tablespoons sugar</li>
+                <li>1 teaspoon whole peppercorns</li>
+                <li>10 cloves garlic</li>
+                <li>1 pig ear</li>
+                <li>1 pork jowl</li>
+                <li>1/2 pork snout</li>
+                <li>1/2 pork tongue</li>
+            </ul>
+            <h4>Pork Sisig</h4>
+            <ul>
+                <li>1 tablespoon ginger, chopped</li>
+                <li>5 cloves garlic, chopped</li>
+                <li>4 bird's eye chile peppers, chopped</li>
+                <li>1 onion, diced</li>
+                <li>1/4 cup Filipino soy sauce</li>
+                <li>2 tablespoons calamansi juice</li>
+                <li>2 tablespoons coconut vinegar</li>
+                <li>4 eggs</li>
+                <li>4 serving rice, cooked</li>
+            </ul>
+        <p>This is the recipe for cooking Pork Sisig</p>
+            <h5>For the braised pork:</h5>
+            <ol>
+                <li>Combine the soy sauce, vinegar, salt, sugar, peppercorns, garlic, pig ear, jowl, snout and tongue in a large stockpot and add enough water to completely cover the pork.</li>
+                <li>Simmer on low heat until the pork is soft but not completely tender, 1 hour 30 minutes.</li>
+                <li>Remove the pork and chill.</li>
+            </ol>
+            <h5>For the pork sisig:</h5>
+            <ol>
+                <li>Preheat a charcoal grill to high heat, preferably using lump charcoal.</li>
+                <li>Grill the pork parts until the skin is crispy and slightly charred, and then refrigerate.</li>
+                <li>Dice the pork parts into small pieces.</li>
+                <li>Saute the ginger, garlic, chiles and onions in a large saute pan for 1 minute.</li>
+                <li>Add the pork and saute for 4 minutes.</li>
+                <li>Add the Filipino soy sauce, calamansi juice and coconut vinegar.</li>
+                <li>Divide the pork among 4 pre-heated fajita platters.</li>
+                <li>Crack 1 egg onto each platter and mix the egg and pork together.</li>
+                <li>Serve atop the rice.</li>
+            </ol>
+            
+        
+        </article>
     </body>
 </html>
